--- a/circle.yml
+++ b/circle.yml
@@ -8,7 +8,8 @@ machine:
 dependencies:
   pre:
     - git clone "git@github.com:facebook/react-native.git"
-    - cd $LINUX_REPO && git checkout $LINUX_SHA1
+    # TODO it can be a branch build, in that case fetch origin is no needed
+    - cd $LINUX_REPO && git fetch origin pull/$PULL_ID/head && git checkout $LINUX_SHA1
     
 test:
   override:
