--- a/circle.yml
+++ b/circle.yml
@@ -1,7 +1,10 @@
 # OS X project
 # $LINUX_SHA1 set via parameterised builds API endpoint
+# $PULL_ID set via parameterised builds API endpoint
 
 machine:
+  xcode:
+    version: 7.3
   environment:
     LINUX_REPO: "react-native"
     
@@ -9,12 +12,19 @@ dependencies:
   pre:
     - git clone "git@github.com:facebook/react-native.git"
     # TODO it can be a branch build, in that case fetch origin is no needed
-    - cd $LINUX_REPO && git fetch origin pull/$PULL_ID/head && git checkout $LINUX_SHA1
+    # - cd $LINUX_REPO && git fetch origin pull/$PULL_ID/head && git checkout $LINUX_SHA1
     
 test:
   override:
     - echo "skipping tests" || touch test-failure.txt:
         pwd: $LINUX_REPO
+    - xctool
+      -project Examples/UIExplorer/UIExplorer.xcodeproj
+      -scheme UIExplorer
+      -sdk iphonesimulator
+      -destination 'platform=iOS Simulator,name=iPhone 5,OS=9.2':
+        pwd: $LINUX_REPO
+
   post:
-    - bash report-react-native-status.sh
+    # - bash report-react-native-status.sh
 
