--- a/circle.yml
+++ b/circle.yml
@@ -24,7 +24,8 @@ test:
       -project Examples/UIExplorer/UIExplorer.xcodeproj
       -scheme UIExplorer
       -sdk iphonesimulator
-      -destination 'platform=iOS Simulator,name=iPhone 5,OS=9.2'
+        pwd: $LINUX_REPO
+
   post:
     # TODO how to post Error status?
     - bash report-react-native-status.sh
